# mecab_dictionaries

./: .flake8  .gitignore  LICENSE  Makefile  README.md  convert_userdic.py  download_ipadic.sh  download_jumandic.sh  download_mecab.sh  download_unidic.sh  mecab.patch  pyproject.toml  sample_userdic.jsonl  scrape_ninjal.py
ipadic/: .gitignore  Makefile  dicrc  make_dictionary.sh
ipadic/ipadic/: pyproject.toml
ipadic/ipadic-neologd/: pyproject.toml
ipadic/ipadic-neologd/ipadic_neologd/: __init__.py
ipadic/ipadic/ipadic/: __init__.py  __version__.py
jumandic/: .gitignore  Makefile  dicrc  make_dictionary.sh
jumandic/jumandic/: .gitignore  pyproject.toml
jumandic/jumandic/jumandic/: __init__.py
mecab-cli/: Makefile  pyproject.toml
mecab-cli/mecab_cli/: __main__.py
unidic/: .gitignore  Makefile  convert_neologd2unidic3.py  dicrc  make_dictionary.sh  original-dicrc
unidic/unidic-csj/: .gitignore  pyproject.toml
unidic/unidic-csj-neologd/: pyproject.toml
unidic/unidic-csj-neologd/unidic_csj_neologd/: __init__.py
unidic/unidic-csj/unidic_csj/: __init__.py
unidic/unidic-cwj/: pyproject.toml
unidic/unidic-cwj-neologd/: pyproject.toml
unidic/unidic-cwj-neologd/unidic_cwj_neologd/: __init__.py
unidic/unidic-cwj/unidic_cwj/: __init__.py
