[tool.poetry]
name = "mecab-dictionaries"
version = "0.1.0"
description = "create various dictionaries for MeCab and MeCab CLI using fugashi"
authors = ["Tetsutaro Maruyama <tetsutaro.maruyama@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
beautifulsoup4 = "^4.11.1"
requests = "^2.28.2"
packaging = "^23.0"
tqdm = "^4.64.1"
fugashi = "^1.2.1"
neologdn = "^0.5.1"

[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
flake8 = "4.0.1"
python-lsp-server = "^1.7.1"

# [tool.flake8]
# -> .flake8

[tool.black]
line-length = 79
include = "\\.pyi?$"

[tool.mypy]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["src", "tests"]
addopts = "-v --cov --flake8 --mypy"
filterwarnings = """
    ignore:SelectableGroups dict interface is deprecated. Use select.
"""
