[tool.poetry]
name = "ipadic"
version = "2.7.0-20070801"
description = "IPA Dictionary"
authors = ["Tetsutaro Maruyama <tetsutaro.maruyama@gmail.com>"]
packages = [{include = "ipadic"}]
include = ["ipadic/__version__.py", "ipadic/dic/*"]

[tool.poetry.dependencies]
python = "^3.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
