[tool.poetry]
name = "unidic-csj"
version = "3.1.1"
description = "UniDic-csj"
authors = ["Tetsutaro Maruyama <tetsutaro.maruyama@gmail.com>"]
packages = [{include = "unidic_csj"}]
include = ["unidic_csj/__version__.py", "unidic_csj/dic/*"]

[tool.poetry.dependencies]
python = "^3.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
